# Genus

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  build_wheels.sh  build_wheels_test.sh  fly.toml  pyproject.toml  setup.py
Balaban10/: FitCycles.c  FitCycles.out  austin_adj_no_21.ipynb  cycles.txt  explore.ipynb  generate_austin.ipynb  makefile  test.ipynb
Balaban10C/: FitCycles  FitCycles.c  FitCycles.out  explore.ipynb  makefile
CalcCycles/: 19CycleAdjList.txt  BalabanOutput.txt  BalabanRandomAdjCycle.java  CalulateCycles.java  Cycle.java  CycleCalculator.java  CycleCalculatorNoInput.java  CycleCalculatorOutput.txt  William2OutputAdj.txt
CalcGenus/: 3-12-cage.out  CalcGenus.c  CalcGenus.out  CalcGenus1.out  CalcGenus2.out  CalcGenus3.out  explore.ipynb  graphDatabase.nb  makefile  test_issue_graphs.py  verifyEmbedding.ipynb
FitCycles/: FitCycles.c  austin_adj_max_fit.ipynb  cycles_by_vertex.txt  explore.ipynb  generate.ipynb  test.ipynb
HoG/: 3-8-cage.g6  3-8-cage.mc  README.md  genus.c  makefile  test_docs.py  test_rome.py
MultiGenus/: README.md  README.txt  convert.ipynb  convert.py  makefile  multi_genus.c  multi_genus_longtype.c  multi_genus_parallel.c  multiread.c  planar_cutthroughedges_draw.c  planar_draw.c  test.tex
Obstructions/: KuratowskiMinors.csv  KuratowskiMinors.ipynb  Test.ipynb  adj_format.py  find_obstructions.py  genus_algos.py  one_vertex_sum.py  test_obstructions.py
PAGE/: README.md  graphDatabase.nb  makefile  page.c  page.py  parse_graph.py  parse_graph6.py  test_docs.py  test_issue_graphs.py  test_rome.py  verify_faces.py  (+3 more)
(+320 files in other folders)
